style: Ensure sign-in page is aligned with header

--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -2,6 +2,7 @@
   width: 28vw;
   display: flex;
   flex-direction: column;
+  margin-left: 3rem;
 
   .title {
     margin: 10px 0;
